--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Simple Blog</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-firestore.js"></script>
 </head>
 <body>
   <h1>Welcome to the Simple Blog</h1>
