--- a/admin.html
+++ b/admin.html
@@ -3,8 +3,8 @@
 <head>
   <title>Admin Page</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
 </head>
 <body>
   <h1>Admin Page</h1>
