--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simple Blog</title>
+  <title>Farag's Blog</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
 </head>
 <body>
-  <h1>Welcome to the Simple Blog</h1>
+  <h1>Welcome to the Farag's Blog</h1>
   <div id="blogs-container"></div>
 
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
