--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Admin Page</h1>
+  <textarea id="blog-title" placeholder="Type your title here"></textarea>
   <textarea id="blog-text" placeholder="Type your blog here"></textarea>
   <button id="submit-blog">Submit</button>
   
