--- a/admin.html
+++ b/admin.html
@@ -11,7 +11,7 @@
     <div class="admin-box">
       <input id="blog-title" class="admin-title" type="text" placeholder="Enter blog title">
       <input id="blog-text" class="admin-input" type="text" placeholder="Enter blog content">
-      <button id="submitButton" class="admin-button">Submit</button>
+      <button id="submit-blog" class="admin-button">Submit</button>
     </div>
 
   </div>
